log
Thu 04 May 2023 04:38:49 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
5461c37
Thu 04 May 2023 05:19:23 PM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:11: error: ‘marks’ undeclared (first use in this function); did you mean ‘marcas’?
   59 |           marks[num] = 1;
      |           ^~~~~
      |           marcas
sudoku.c:59:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:47:16: error: unused variable ‘p’ [-Werror=unused-variable]
   47 |   int i, j, k, p;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
0151211
Thu 04 May 2023 05:19:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:11: error: ‘marks’ undeclared (first use in this function); did you mean ‘marcas’?
   59 |           marks[num] = 1;
      |           ^~~~~
      |           marcas
sudoku.c:59:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:47:16: error: unused variable ‘p’ [-Werror=unused-variable]
   47 |   int i, j, k, p;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
02a23c5
Thu 04 May 2023 05:19:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:16: error: unused variable ‘p’ [-Werror=unused-variable]
   47 |   int i, j, k, p;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
32494c9
Thu 04 May 2023 05:23:33 PM UTC: 
 sudoku.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
df7c569
Thu 04 May 2023 05:25:28 PM UTC: 
 sudoku.c | 40 +++++++++++++++++++---------------------
 1 file changed, 19 insertions(+), 21 deletions(-)
 tests:  2|4
total_score: 15/70
87c61cf
Sat 06 May 2023 10:56:15 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:61:10: error: ‘k’ undeclared (first use in this function)
   61 |     for (k = 1; k <= 9; k++) {
      |          ^
sudoku.c:61:10: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:10: error: ‘p’ undeclared (first use in this function)
   84 |     for (p = 0; p < 9; p++) {
      |          ^
sudoku.c:47:13: error: unused variable ‘numColumnas’ [-Werror=unused-variable]
   47 |   int i, j, numColumnas, num;
      |             ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ce2df64
Sat 06 May 2023 11:06:37 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:61:10: error: ‘k’ undeclared (first use in this function)
   61 |     for (k = 1; k <= 9; k++) {
      |          ^
sudoku.c:61:10: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:10: error: ‘p’ undeclared (first use in this function)
   84 |     for (p = 0; p < 9; p++) {
      |          ^
sudoku.c:47:13: error: unused variable ‘numColumnas’ [-Werror=unused-variable]
   47 |   int i, j, numColumnas, num;
      |             ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
22e183d
Sat 06 May 2023 11:07:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:19: error: unused variable ‘numColumnas’ [-Werror=unused-variable]
   47 |   int i, j, k, p, numColumnas, num;
      |                   ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d5f825b
Sat 06 May 2023 11:07:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a34417e
